폴더구조, 메뉴기능, 로그설정중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,12 @@ spring:
   h2:
     console:
       enabled: true
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 100MB
+      max-request-size: 500MB
+
 logging:
   level:
-    org.hibernate:
-      type.descriptor.sql: trace
-      SQL: DEBUG
+    root: info
