--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     url: jdbc:mariadb://localhost:3306/kiosk?characterEncoding=UTF-8
     username: root
     password: mariadb
+  profiles:
+    include: oauth
   jpa:
     hibernate:
       ddl-auto: update
@@ -13,6 +15,7 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+    generate-ddl: true
   servlet:
     multipart:
       enabled: true
@@ -22,5 +25,4 @@ logging:
   level:
     org:
       springframework:
-        web: TRACE
-
+        web: debug
